--- a/OnTopScreenCapture/MainWindow.xaml
+++ b/OnTopScreenCapture/MainWindow.xaml
@@ -22,7 +22,7 @@
                     <ContextMenu>
                         <MenuItem Name="ExitButton" Header="Exit Application" Click="Exit_Click" />
                         <MenuItem Name="WindowOnTopButton" Header="Window on top" IsCheckable="True" Click="WindowOnTop_Click"/>
-                        <MenuItem Name="WindowOpacity" Header="Opacity" Click="OpacityList_Click" />
+                        <MenuItem Name="WindowOpacity" Header="Opacity" />
                     <Separator />
                         <MenuItem Name="PrimaryMonitorCaptureButton" Header="Start Capturing PrimaryMonitor.." Click="PrimaryMonitorCapture_Click" />
                         <MenuItem Name="ProcessCaptureList" Header="Start Capturing a process.." Click="ProcessList_Click"/>
@@ -36,6 +36,7 @@
                 <ContextMenu>
                     <MenuItem Name="ExitButtonTray" Header="Exit Application" Click="Exit_Click" />
                     <MenuItem Name="WindowOnTopButtonTray" Header="Window on top" IsCheckable="True" Click="WindowOnTop_Click"/>
+                    <MenuItem Name="WindowOpacityTray" Header="Opacity" />
                     <MenuItem IsEnabled="False" Name="StopCaptureButtonTray" Header="Stop Capturing" Click="StopCapturing_Click" />
                     <Separator />
                     <MenuItem Name="PrimaryMonitorCaptureButtonTray" Header="Start Capturing PrimaryMonitor.." Click="PrimaryMonitorCapture_Click" />
